force-app/main/default/objects/Address_Book__c/Address_Book__c.object-meta.xml
<CustomObject>
    <label>Address Book</label>
    <nameField>
        <displayFormat>Address-{000000}</displayFormat>
        <label>Customer Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Book</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>