force-app/main/default/objects/Address_Book__c/fields/Address_detail__c.field-meta.xml
<CustomField>
    <fullName>Address_detail__c</fullName>
    <description>Address detail</description>
    <inlineHelpText>Please input the address detail</inlineHelpText>
    <label>Address detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>