force-app/main/default/objects/Address_Book__c/fields/Address_type__c.field-meta.xml
<CustomField>
    <fullName>Address_type__c</fullName>
    <label>Address type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery address</fullName>
                <default>true</default>
                <label>Delivery address</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>