force-app/main/default/objects/Address_Book__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <inlineHelpText>Postcode</inlineHelpText>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>